panel del admin

--- a/paginas.html/dermocomestica.html
+++ b/paginas.html/dermocomestica.html
@@ -91,5 +91,66 @@
                 Encuentra medicamentos de confianza, recetados y de venta libre, con los mejores precios y atención profesional.
             </p>
         </section>
+        <!-- 🔹 SECCIÓN DE MEDICAMENTOS -->
+<div class="flex flex-wrap justify-center gap-6 p-6">
+
+    <!-- CARD 1 -->
+    <div class="bg-white rounded-2xl w-80 p-5 flex flex-col items-center text-center shadow-md hover:shadow-lg transition-shadow duration-300">
+        <div class="w-28 h-28 mb-4">
+            <img src="../assets/img/ibuprofeno.png" alt="Ibuprofeno 400mg" class="w-full h-full object-contain">
+        </div>
+        <div class="mb-4">
+            <h2 class="text-lg font-bold text-gray-800 mb-1">Ibuprofeno 400mg</h2>
+            <p class="text-sm text-gray-500">Analgésico y antiinflamatorio eficaz para dolores musculares y fiebre.</p>
+        </div>
+        <button class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white text-sm font-medium py-2 px-4 rounded-lg transition-colors duration-300">
+            Agregar al carrito
+        </button>
+    </div>
+
+    <!-- CARD 2 -->
+    <div class="bg-white rounded-2xl w-80 p-5 flex flex-col items-center text-center shadow-md hover:shadow-lg transition-shadow duration-300">
+        <div class="w-28 h-28 mb-4">
+            <img src="../assets/img/paracetamol.png" alt="Paracetamol 500mg" class="w-full h-full object-contain">
+        </div>
+        <div class="mb-4">
+            <h2 class="text-lg font-bold text-gray-800 mb-1">Paracetamol 500mg</h2>
+            <p class="text-sm text-gray-500">Reduce el dolor y la fiebre de manera segura y efectiva.</p>
+        </div>
+        <button class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white text-sm font-medium py-2 px-4 rounded-lg transition-colors duration-300">
+            Agregar al carrito
+        </button>
+    </div>
+
+    <!-- CARD 3 -->
+    <div class="bg-white rounded-2xl w-80 p-5 flex flex-col items-center text-center shadow-md hover:shadow-lg transition-shadow duration-300">
+        <div class="w-28 h-28 mb-4">
+            <img src="../assets/img/amoxicilina.png" alt="Amoxicilina 500mg" class="w-full h-full object-contain">
+        </div>
+        <div class="mb-4">
+            <h2 class="text-lg font-bold text-gray-800 mb-1">Amoxicilina 500mg</h2>
+            <p class="text-sm text-gray-500">Antibiótico indicado para infecciones respiratorias y de oído.</p>
+        </div>
+        <button class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white text-sm font-medium py-2 px-4 rounded-lg transition-colors duration-300">
+            Agregar al carrito
+        </button>
+    </div>
+
+    <!-- CARD 4 -->
+    <div class="bg-white rounded-2xl w-80 p-5 flex flex-col items-center text-center shadow-md hover:shadow-lg transition-shadow duration-300">
+        <div class="w-28 h-28 mb-4">
+            <img src="../assets/img/omeprazol.png" alt="Omeprazol 20mg" class="w-full h-full object-contain">
+        </div>
+        <div class="mb-4">
+            <h2 class="text-lg font-bold text-gray-800 mb-1">Omeprazol 20mg</h2>
+            <p class="text-sm text-gray-500">Protector gástrico para aliviar la acidez y el reflujo.</p>
+        </div>
+        <button class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white text-sm font-medium py-2 px-4 rounded-lg transition-colors duration-300">
+            Agregar al carrito
+        </button>
+    </div>
+
+</div>
+    </main>
                 <script src="../index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js">
