--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <li class="styles_li"><a href="./paginas.html/cuidado-personal.html" class="hover:text-[#12b1be]">Cuidado Personal</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
                 <li class="styles_li"><a href="./paginas.html/dermocomestica.html" class="hover:text-[#12b1be]">Dermocosmética</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
                 <li class="styles_li"><a href="./paginas.html/medicamentos.html" class="hover:text-[#12b1be]">Medicamentos</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
-    <li   li class="styles_li"><a href="bebes.html" class="hover:text-[#12b1be]">Bebés</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+                <li class="styles_li"><a href="./paginas.html/bebes.html" class="hover:text-[#12b1be]">Bebés</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
 
     <!-- 🔸 Comentarios para enlaces futuros (cuando existan los “Ver más”) -->
     <!-- <li class="styles_li"><a href="ver-mas-medicamentos.html" class="hover:text-[#12b1be]">Ver más Medicamentos</a></li> -->
