--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
         <div class="flex justify-between items-center py-3 px-8 max-w-7xl mx-auto">
             <a href="index.html" class="flex items-center gap-2">
                 <img src="assets/img/logo.png" alt="Logo" class="w-14 h-14">
-                <span class="hidden sm:inline font-semibold text-[#275c74] tracking-wide text-lg">Farmacia La Mano del Momo</span>
+                <span class="hidden sm:inline font-semibold text-[#275c74] tracking-wide text-lg">Farmacia del Momo</span>
             </a>
             <nav class="hidden lg:flex gap-8 text-base font-medium text-[#275c74]">
-                <a href="#" class="relative group transition">Inicio
+                <a href="#" class="relative group transition font-family-base">Inicio
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Perfumes
+                <a href="#" class="relative group transition font-family-base">Perfumes
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Cuidado Personal
+                <a href="#" class="relative group transition font-family-base">Cuidado Personal
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Dermocosmética
+                <a href="#" class="relative group transition font-family-base">Dermocosmética
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Medicamentos
+                <a href="#" class="relative group transition font-family-base">Medicamentos
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Bienestar
+                <a href="#" class="relative group transition font-family-base">Bienestar
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Bebés
+                <a href="#" class="relative group transition font-family-base">Bebés
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
             </nav>
@@ -47,8 +47,8 @@
                 <button class="group relative">
                     <img src="assets/img/icons8-carrito-de-compras-50.png" alt="Carrito" class="w-6 h-6 group-hover:scale-110 transition-transform duration-300">
                 </button>
-                <button id="inicio_sesion" class="group">
-                    <img data-modal-target="authentication-modal" data-modal-toggle="authentication-modal" src="assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
+                <button id="perfil" class="group">
+                    <img  src="assets/img/icons8-usuario-24.png" alt="Usuario" class="w-6 h-6 group-hover:opacity-70 transition-opacity duration-300">
                 </button>
                 <button id="btnAbrir" class="lg:hidden">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 50 50"><path d="M3 9a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3zm0 15a1 1 0 1 0 0 2h44a1 1 0 1 0 0-2H3z"/>
@@ -57,102 +57,100 @@
             </div>
         </div>
     </header>
-<!-- 🔹 MODAL DE INICIO DE SESIÓN -->
-<div
-  id="authentication-modal"
-  tabindex="-1"
-  aria-hidden="true"
-  class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
->
-  <div class="relative p-4 w-full max-w-md max-h-full">
-    <div class="relative rounded-lg shadow-sm bg-[#0e4448]">
-      
-      <!-- Header -->
-      <div class="flex items-center justify-between p-4 md:p-5 border-b border-gray-200 dark:border-gray-600 rounded-t">
-        <div class="flex items-center gap-2">
-          <img src="assets/img/logo.png" class="w-10 h-10" alt="">
-          <h3 class="text-xl font-semibold text-white font-family-base">Inicio de sesión</h3>
+    <!-- menu para no iniciados -->
+    <div id="userMenuNoSesion" class="hidden fixed right-0 mt-20 z-40 w-64 bg-[#0e4448] shadow-2xl overflow-hidden transform transition-all duration-300 ease-in-out translate-x-full origin-top-right">
+        <div class="p-3 border-b border-gray-200">
+            <p class="text-white font-semibold text-base font-family-base">Bienvenido</p>
+            <p class="text-gray-400 text-sm">Accede o crea una cuenta</p>
         </div>
-        <button
-          id="cerrar_sesion"
-          type="button"
-          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 flex justify-center items-center"
-          data-modal-hide="authentication-modal"
-        >
-          <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M1 1l6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-            />
-          </svg>
-          <span class="sr-only">Cerrar</span>
-        </button>
-      </div>
-
-      <!-- Formulario -->
-      <div class="p-4 md:p-5">
-        <form class="space-y-4" action="#">
-          <div>
-            <label for="email" class="block mb-2 text-sm font-medium text-white">Email</label>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="momo@gmail.com"
-              required
-              class="bg-gray-500 border border-gray-500 text-gray-900 text-sm rounded-lg focus:ring-[#12b1be] focus:border-[#12b1be] block w-full p-2.5"
-            />
-          </div>
-          <div>
-            <label for="password" class="block mb-2 text-sm font-medium text-white">Contraseña</label>
-            <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="••••••••"
-              required
-              class="bg-gray-500 border border-gray-500 text-gray-900 text-sm rounded-lg focus:ring-[#12b1be] focus:border-[#12b1be] block w-full p-2.5"
-            />
-          </div>
-
-          <div class="flex justify-between items-center">
-            <label class="flex items-center text-sm text-white">
-              <input
-                id="remember"
-                type="checkbox"
-                class="w-4 h-4 border border-gray-300 rounded-sm focus:ring-[#12b1be]"
-              />
-              <span class="ml-2">Recordarme</span>
-            </label>
-            <a href="#" class="text-sm text-[#12b1be] hover:underline">Olvidé mi contraseña</a>
-          </div>
-
-          <button
-            type="submit"
-            class="w-full text-white bg-[#1e6e75] hover:bg-[#12b1be] focus:ring-4 focus:outline-none focus:ring-[#12b1be]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center transition"
-          >
-            Iniciar sesión
-          </button>
-
-          <p class="text-sm font-medium text-gray-300 text-center">
-            ¿No eres usuario?
-            <a href="#" class="text-[#12b1be] hover:underline">Crear tu cuenta</a>
-          </p>
-        </form>
-      </div>
+        <div class="flex flex-col">
+            <a href="#" id="inicio_sesion" data-modal-target="authentication-modal" data-modal-toggle="authentication-modal" class="px-5 py-3 text-gray-200 text-sm font-medium hover:bg-gray-100 hover:text-[#12b1be] transition-colors duration-200"> Iniciar sesión
+            </a>
+            <a href="registro.html" class="px-5 py-3 text-gray-200 text-sm font-medium hover:bg-gray-100 hover:text-[#12b1be] transition-colors duration-200"> Registrarse 
+            </a>
+        </div>
     </div>
+
+     <!-- menu para iniciados -->
+    <div id="userMenuSesion" class="hidden fixed right-0 mt-20 z-40 w-64 bg-[#0e4448] shadow-2xl overflow-hidden transform transition-all duration-300 ease-in-out translate-x-full origin-top-right">
+        <div class="p-3 border-b border-gray-200">
+            <p class="text-white font-semibold text-base font-family-base">Bienvenido<span id="nombreUsuario font-family-base"> Baltasar</span></p>
+            <p class="text-gray-400 text-sm">Tu cuenta</p>
+        </div>
+        <div class="flex flex-col">
+            <a href="#" id="perfil"  class="px-5 py-3 text-gray-200 text-sm font-medium hover:bg-gray-100 hover:text-[#12b1be] transition-colors duration-200"> Perfil
+            </a>
+        </div>
+         <div class="flex flex-col">
+            <a href="#" id="misCompras"  class="px-5 py-3 text-gray-200 text-sm font-medium hover:bg-gray-100 hover:text-[#12b1be] transition-colors duration-200"> Mis Compras
+            </a>
+        </div>
+         <div class="flex flex-col">
+            <a href="#" id="Favoritos"  class="px-5 py-3 text-gray-200 text-sm font-medium hover:bg-gray-100 hover:text-[#12b1be] transition-colors duration-200"> Favoritos
+            </a>
+        </div>
+         <div class="flex flex-col">
+            <a href="#" id="configuracion"  class="px-5 py-3 text-gray-200 text-sm font-medium hover:bg-gray-100 hover:text-[#12b1be] transition-colors duration-200"> Configuracion
+            </a>
+        </div>
+        <div class="flex flex-col">
+            <a href="#" id="cerrarSesion"  class="px-5 py-3 text-gray-200 text-sm font-medium hover:bg-gray-100 hover:text-[#12b1be] transition-colors duration-200"> Cerrar sesion
+            </a>
+        </div>
+    </div>
+
+
+    <!-- 🔹 MODAL DE INICIO DE SESIÓN -->
+     <div id="loginModal" class="fixed inset-0 flex items-center justify-center bg-[rgba(0,0,0,0.6)] hidden z-50">
+        <div class="relative isolate bg-[#0e4448] px-8 py-10 sm:py-12 rounded-2xl shadow-2xl w-[22rem] sm:w-[28rem] transform transition-all duration-300 scale-100">
+            <button id="closeLoginModal" class="absolute top-3 right-3 text-gray-400 hover:text-white text-xl cursor-pointer"> ✕ </button>
+
+    <!-- Título -->
+    <div class="text-center mb-6">
+      <h2 class="text-3xl font-semibold tracking-tight text-white font-family-base">Iniciar sesión</h2>
+      <p class="mt-2 text-base text-gray-400 font-family-base">Accede a tu cuenta para continuar</p>
+    </div>
+
+    <!-- Formulario -->
+    <form class="space-y-5">
+      <div>
+        <label class="block text-sm font-semibold text-white mb-1">Correo electrónico</label>
+        <input 
+          type="email" 
+          required 
+          placeholder="tuemail@ejemplo.com"
+          class="block w-full rounded-md bg-white/10 px-3.5 py-2 text-white placeholder-gray-400 outline-1 outline-white/10 focus:outline-2 focus:outline-[#12b1be] transition"
+        >
+      </div>
+
+      <div>
+        <label class="block text-sm font-semibold text-white mb-1">Contraseña</label>
+        <input 
+          type="password" 
+          required 
+          placeholder="••••••••"
+          class="block w-full rounded-md bg-white/10 px-3.5 py-2 text-white placeholder-gray-400 outline-1 outline-white/10 focus:outline-2 focus:outline-[#12b1be] transition"
+        >
+        <div class="text-right mt-2">
+          <a href="#" class="text-sm text-[#12b1be] hover:underline">¿Olvidaste tu contraseña?</a>
+        </div>
+      </div>
+
+      <button 
+        type="submit"
+        class="w-full mt-3 rounded-md bg-[#1e6e75] px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-xs hover:bg-[#12b1be] focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#1e6e75] transition">
+        Iniciar sesión
+      </button>
+    </form>
+
+    <p class="text-sm text-gray-400 text-center mt-5">
+      ¿No tienes cuenta? 
+      <a href="registro.html" class="text-[#12b1be] hover:underline font-semibold">Regístrate</a>
+    </p>
   </div>
 </div>
 
-<!-- 🔹 OVERLAY OSCURO -->
-<div
-  id="dark-overlay"
-  class="fixed inset-0 bg-black bg-opacity-50 opacity-0 pointer-events-none transition-opacity duration-500 z-40 hidden"
-></div>
-
+    
     <div id="menuOffcanvas" class="shadow-lg shadow-black/30 fixed top-0 right-0 h-full w-3/4 max-w-sm bg-[#275c74] text-white transform translate-x-full transition-transform duration-500 ease-in-out z-[999] flex flex-col justify-between">
     <div>
         <div class="flex justify-between items-center p-5 border-b border-white/20">
@@ -228,7 +226,7 @@
                 </div>
                 <div class="relative lg:w-1/2">
                     <img src="assets/img/modern-pharmacy-interior-with-professional-pharmac.png" 
-                    class="w-full h-auto rounded-2xl shadow-xl" alt="Imagen de farmacia moderna">
+                    class="w-full h-auto rounded-2xl shadow-xl z-30" alt="Imagen de farmacia moderna">
                     <div class="absolute bottom-[-20px] right-5 bg-white rounded-2xl shadow-lg px-6 py-4 text-center">
                         <h3 class="text-3xl font-bold text-[#009FB7] leading-none">25+</h3>
                         <p class="text-sm text-gray-700 font-medium">Años de experiencia</p>
