--- a/admin/productos.html
+++ b/admin/productos.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Administrar Productos - Farmacia Luz</title>
   <link rel="stylesheet" href="../assets/output.css" />
+  <script src="../assets/js/api.js"></script>
 </head>
+
 <body class="bg-gray-100 flex min-h-screen font-sans">
 
-  <!-- 🔹 SIDEBAR -->
+  <!-- SIDEBAR -->
   <aside class="w-64 bg-[#275c74] text-white flex flex-col justify-between">
     <div>
       <div class="p-6 border-b border-white/20">
@@ -26,20 +28,21 @@
     </div>
   </aside>
 
-  <!-- 🔹 CONTENIDO PRINCIPAL -->
+  <!-- CONTENIDO -->
   <main class="flex-1 p-8">
 
-    <!-- Encabezado -->
     <div class="flex justify-between items-center mb-8">
       <h1 class="text-3xl font-bold text-[#275c74]">Gestión de Productos</h1>
-      <button id="btnNuevo" class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white px-4 py-2 rounded-lg transition">
+
+      <button id="btnNuevo"
+        class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white px-4 py-2 rounded-lg transition">
         ➕ Nuevo Producto
       </button>
     </div>
 
-    <!-- Tabla -->
+    <!-- TABLA -->
     <div class="overflow-x-auto bg-white rounded-xl shadow-md">
-      <table class="min-w-full border-collapse text-sm text-left">
+      <table class="min-w-full border-collapse text-sm">
         <thead class="bg-[#275c74] text-white">
           <tr>
             <th class="p-3">ID</th>
@@ -49,135 +52,206 @@
             <th class="p-3">Acciones</th>
           </tr>
         </thead>
-        <tbody id="tablaProductos" class="divide-y">
-          <!-- JS inyectará filas -->
-        </tbody>
+        <tbody id="tablaProductos" class="divide-y"></tbody>
       </table>
     </div>
 
-    <!-- Modal (Agregar / Editar) -->
-    <div id="modalProducto" class="hidden fixed inset-0 bg-black/40 flex items-center justify-center z-50">
+    <!-- MODAL -->
+    <div id="modalProducto"
+      class="hidden fixed inset-0 bg-black/40 flex items-center justify-center z-50">
       <div class="bg-white rounded-xl p-6 w-96 shadow-xl">
         <h2 id="tituloModal" class="text-xl font-bold text-[#275c74] mb-4">Nuevo Producto</h2>
+
         <form id="formProducto" class="flex flex-col gap-3">
-          <input id="nombre" placeholder="Nombre del producto" class="border rounded p-2">
-          <input id="precio" placeholder="Precio" type="number" class="border rounded p-2">
-          <input id="stock" placeholder="Stock" type="number" class="border rounded p-2">
-          <textarea id="descripcion" placeholder="Descripción" class="border rounded p-2"></textarea>
+
+          <input id="descripcion" placeholder="Descripción" class="border rounded p-2" />
+          <input id="precioUnitario" placeholder="Precio" type="number" class="border rounded p-2" />
+          <input id="stock" placeholder="Stock" type="number" class="border rounded p-2" />
+          <input id="codBarra" placeholder="Código de barras" type="number" class="border rounded p-2" />
+          <input id="urlImagen" placeholder="Nombre imagen (opcional)" class="border rounded p-2" />
+
           <div class="flex justify-end gap-2 mt-3">
-            <button type="button" id="btnCancelar" class="px-4 py-2 rounded border border-gray-400 hover:bg-gray-100">Cancelar</button>
-            <button type="submit" class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white px-4 py-2 rounded">Guardar</button>
+            <button type="button" id="btnCancelar"
+              class="px-4 py-2 rounded border border-gray-400 hover:bg-gray-200">
+              Cancelar
+            </button>
+
+            <button type="submit"
+              class="bg-[#12b1be] hover:bg-[#0e9ca9] text-white px-4 py-2 rounded">
+              Guardar
+            </button>
           </div>
+
         </form>
       </div>
     </div>
 
   </main>
+<script>
+const modal = document.getElementById("modalProducto");
+const tabla = document.getElementById("tablaProductos");
+const tituloModal = document.getElementById("tituloModal");
 
-  <script>
-    // ==================== VARIABLES ====================
-    const modal = document.getElementById("modalProducto");
-    const btnNuevo = document.getElementById("btnNuevo");
-    const btnCancelar = document.getElementById("btnCancelar");
-    const form = document.getElementById("formProducto");
-    const tabla = document.getElementById("tablaProductos");
-    const tituloModal = document.getElementById("tituloModal");
+const inputDescripcion = document.getElementById("descripcion");
+const inputPrecio      = document.getElementById("precioUnitario");
+const inputStock       = document.getElementById("stock");
+const inputCodBarra    = document.getElementById("codBarra");
+const inputUrlImagen   = document.getElementById("urlImagen");
 
-    let productos = [
-      { id: 1, nombre: "Ibuprofeno 400mg", precio: 2500, stock: 30 },
-      { id: 2, nombre: "Paracetamol 500mg", precio: 1900, stock: 45 },
-      { id: 3, nombre: "Omeprazol 20mg", precio: 3200, stock: 20 }
-    ];
+let editId = null;
+let productosCache = [];
 
-    let productoEditando = null;
+// ==================== CARGAR PRODUCTOS ====================
+async function cargarProductos() {
+    const datos = await apiGet("Suministros");
+    productosCache = datos;
 
-    // ==================== FUNCIONES ====================
+    tabla.innerHTML = "";
 
-    function renderTabla() {
-      tabla.innerHTML = "";
-      productos.forEach(p => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td class="p-3">${p.id}</td>
-          <td class="p-3">${p.nombre}</td>
-          <td class="p-3">$${p.precio}</td>
-          <td class="p-3">${p.stock}</td>
-          <td class="p-3 flex gap-2">
-            <button onclick="editar(${p.id})" class="text-blue-600 hover:underline">Editar</button>
-            <button onclick="eliminar(${p.id})" class="text-red-600 hover:underline">Eliminar</button>
-          </td>
-        `;
-        tabla.appendChild(tr);
-      });
+    datos.forEach(p => {
+        tabla.innerHTML += `
+        <tr>
+            <td class="p-3">${p.idSuministro}</td>
+            <td class="p-3">${p.descripcion}</td>
+            <td class="p-3">$${p.precioUnitario}</td>
+            <td class="p-3">${p.stock}</td>
+            <td class="p-3 flex gap-2">
+                <button onclick="editar(${p.idSuministro})" class="text-blue-600 hover:underline">Editar</button>
+                <button onclick="eliminar(${p.idSuministro})" class="text-red-600 hover:underline">Eliminar</button>
+            </td>
+        </tr>`;
+    });
+}
+
+// ==================== NUEVO ====================
+document.getElementById("btnNuevo").addEventListener("click", () => {
+    editId = null;
+    tituloModal.textContent = "Nuevo Producto";
+
+    inputDescripcion.value = "";
+    inputPrecio.value      = "";
+    inputStock.value       = "";
+    inputCodBarra.value    = "";
+    inputUrlImagen.value   = "";
+
+    modal.classList.remove("hidden");
+});
+
+// ==================== CANCELAR ====================
+document.getElementById("btnCancelar").addEventListener("click", () => {
+    modal.classList.add("hidden");
+});
+
+// ==================== GUARDAR ====================
+document.getElementById("formProducto").addEventListener("submit", async e => {
+    e.preventDefault();
+
+    let nuevoId = editId;
+    if (nuevoId === null) {
+        const max = productosCache.length ? Math.max(...productosCache.map(x => x.idSuministro)) : 0;
+        nuevoId = max + 1;
     }
 
-    function abrirModal(titulo) {
-      tituloModal.textContent = titulo;
-      modal.classList.remove("hidden");
-    }
+    const descripcion = inputDescripcion.value.trim();
+    const precio      = parseFloat(inputPrecio.value);
+    const stock       = parseInt(inputStock.value);
+    const codBarra    = parseInt(inputCodBarra.value || "0");
+    const urlfoto     = inputUrlImagen.value || "";
 
-    function cerrarModal() {
-      modal.classList.add("hidden");
-      form.reset();
-      productoEditando = null;
-    }
-
-    // ==================== EVENTOS ====================
-    btnNuevo.addEventListener("click", () => abrirModal("Nuevo Producto"));
-    btnCancelar.addEventListener("click", cerrarModal);
-
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const nombre = form.nombre.value.trim();
-      const precio = parseFloat(form.precio.value);
-      const stock = parseInt(form.stock.value);
-
-      if (!nombre || isNaN(precio) || isNaN(stock)) {
-        alert("Por favor, complete todos los campos correctamente.");
+    if (!descripcion || isNaN(precio) || isNaN(stock)) {
+        alert("Completá descripción, precio y stock correctamente.");
         return;
-      }
+    }
 
-      if (productoEditando) {
-        // Actualizar producto existente
-        productoEditando.nombre = nombre;
-        productoEditando.precio = precio;
-        productoEditando.stock = stock;
-      } else {
-        // Crear producto nuevo
-        const nuevo = {
-          id: productos.length + 1,
-          nombre,
-          precio,
-          stock
-        };
-        productos.push(nuevo);
-      }
-
-      renderTabla();
-      cerrarModal();
+    // La API usa QUERYSTRING (NO JSON)
+    const params = new URLSearchParams({
+        id: nuevoId,
+        codBarra: codBarra,
+        descripcion: descripcion,
+        preUnitario: precio,
+        TSuministro: 1,
+        TVenta: 1,
+        stock: stock,
+        urlfoto: urlfoto
     });
 
-    // ==================== FUNCIONES GLOBALES ====================
-    window.editar = (id) => {
-      const prod = productos.find(p => p.id === id);
-      if (!prod) return;
-      productoEditando = prod;
-      form.nombre.value = prod.nombre;
-      form.precio.value = prod.precio;
-      form.stock.value = prod.stock;
-      abrirModal("Editar Producto");
-    };
+    let url = "";
+    let method = "";
 
-    window.eliminar = (id) => {
-      if (confirm("¿Seguro que deseas eliminar este producto?")) {
-        productos = productos.filter(p => p.id !== id);
-        renderTabla();
-      }
-    };
+    if (editId === null) {
+        // POST api/Suministros?id=...
+        url = `${API_URL}/Suministros?${params.toString()}`;
+        method = "POST";
+    } else {
+        // PUT api/Suministros/{id}?descripcion=...
+        params.delete("id");
+        url = `${API_URL}/Suministros/${editId}?${params.toString()}`;
+        method = "PUT";
+    }
 
-    // ==================== INICIO ====================
-    renderTabla();
-  </script>
+    try {
+        const resp = await fetch(url, { method });
+        const text = await resp.text();
+
+        if (!resp.ok) {
+            alert(`Error al guardar (${resp.status}): ${text}`);
+            return;
+        }
+
+    } catch (err) {
+        alert("No se pudo conectar con el servidor.");
+        console.error(err);
+        return;
+    }
+
+    modal.classList.add("hidden");
+    await cargarProductos();
+});
+
+// ==================== EDITAR ====================
+window.editar = async id => {
+    editId = id;
+    tituloModal.textContent = "Editar Producto";
+
+    const p = await apiGet(`Suministros/${id}`);
+
+    inputDescripcion.value = p.descripcion;
+    inputPrecio.value      = p.precioUnitario;
+    inputStock.value       = p.stock;
+    inputCodBarra.value    = p.codBarra;
+    inputUrlImagen.value   = p.urlImagen;
+
+    modal.classList.remove("hidden");
+};
+
+// ==================== ELIMINAR ====================
+window.eliminar = async id => {
+    if (!confirm("¿Seguro que deseas eliminar este producto?")) return;
+
+    try {
+        const resp = await fetch(`${API_URL}/Suministros/${id}`, { method: "DELETE" });
+        const message = await resp.text();
+
+        if (!resp.ok) {
+            alert(`No se pudo eliminar (${resp.status}): ${message}`);
+            return;
+        }
+
+    } catch (err) {
+        console.error(err);
+        alert("Error de red al eliminar.");
+        return;
+    }
+
+    cargarProductos();
+};
+
+// ==================== INICIO ====================
+cargarProductos();
+</script>
+
+
+
 
 </body>
 </html>
