Páginas principales y Carrito+Compra funcional.
Falta Registro y Panel de Administrador.

--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmacia</title>
+    <title>Registrarse</title>
     <link rel="icon" type="image/png" href="assets/img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -307,8 +307,8 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="bg-white py-10 px-6 md:px-20">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+    <footer id=footer2 class="bg-white py-10 px-4 md:px-20">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-10 mx-auto max-w-7xl px-4">
             <div>
                 <h2 class="text-2xl font-bold mb-3 font-family-base">Farmacia Luz</h2>
                 <p class="text-sm text-black">
@@ -318,23 +318,29 @@
             <div>
                 <h3 class="text-lg font-semibold mb-3 font-family-base">Secciones</h3>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Inicio</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Dermocosmética</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Perfumería</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Bebés</a></li>
-                    <li><a href="#" class="hover:text-[#12b1be] transition-colors">Contacto</a></li>
+                    <li><a href="index.html" class="hover:text-[#12b1be] transition-colors">Inicio</a></li>
+                    <li><a href="./paginas/perfumes.html" class="hover:text-[#12b1be] transition-colors">Perfumes</a></li>
+                    <li><a href="./paginas/cuidado-personal.html" class="hover:text-[#12b1be] transition-colors">Cuidado Personal</a></li>
+                    <li><a href="./paginas/dermocomestica.html" class="hover:text-[#12b1be] transition-colors">Dermocosmética</a></li>
+                    <li><a href="./paginas/medicamentos.html" class="hover:text-[#12b1be] transition-colors">Medicamentos</a></li>
+                    <li><a href="./paginas/bebes.html" class="hover:text-[#12b1be] transition-colors">Bebés</a></li>
                 </ul>
             </div>
             <div>
                 <h3 class="text-lg font-semibold mb-3 font-family-base">Contacto</h3>
                 <ul class="space-y-2 text-sm">
-                    <li> Achaval Rodriguez 50, Córdoba</li>
-                    <li> (011) 4567-8901</li>
-                    <li> famrmaciasalud@gmail.com</li>
+                    <li>Achaval Rodriguez 50, Córdoba</li>
+                    <li>(011) 4567-8901</li>
+                    <li>farmacialuz@gmail.com</li>
                 </ul>
+                <div class="flex gap-4 mt-4">
+                    <a href="#" class="hover:text-[#12b1be] transition-colors"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="hover:text-[#12b1be] transition-colors"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="hover:text-[#12b1be] transition-colors"><i class="fa-brands fa-whatsapp"></i></a>
+                </div>
             </div>
         </div>
-        <div class="border-t border-gray-200 mt-10 pt-5 text-center text-sm text-gray-500">
+        <div class="border-t border-gray-700 mt-10 pt-5 text-center text-sm text-gray-500">
             © 2025 Farmacia Luz. Todos los derechos reservados.
         </div>
     </footer>
