--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         </div>
     </section>
 
-    <section id="section2" class="section2 bg-[#99c1cf] py-16 px-6 rounded-xl mt-10"> <div class="flex flex-col items-center gap-6 text-center max-w-7xl mx-auto">
+    <section id="section2" class="section2 bg-[#99c1cf] py-16 px-6 mt-10"> <div class="flex flex-col items-center gap-6 text-center max-w-7xl mx-auto">
             <h4 class="bg-[#12b1be] text-white text-xs px-3 py-1 rounded-full font-family-base uppercase tracking-wide">Nuestros Productos</h4>
             <h2 class="font-bold text-5xl font-family-base">Catálogo</h2>
             <p class="text-sm font-family-base text-gray-700 max-w-2xl">
