--- a/paginas/perfumes.html
+++ b/paginas/perfumes.html
@@ -173,7 +173,7 @@
 
           <p class="text-sm font-medium text-gray-300 text-center">
             ¿No eres usuario?
-            <a href="#" class="text-[#12b1be] hover:underline">Crear tu cuenta</a>
+            <a href="../registro.html" class="text-[#12b1be] hover:underline">Crear tu cuenta</a>
           </p>
         </form>
       </div>
