--- a/registro.html
+++ b/registro.html
@@ -34,22 +34,22 @@
             </a>
 
             <nav class="hidden lg:flex gap-8 text-base font-medium text-[#275c74]">
-                <a href="#" class="relative group transition">Inicio
+                <a href="index.html" class="relative group transition">Inicio
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Perfumes
+                <a href="./paginas/perfumes.html" class="relative group transition">Perfumes
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Cuidado Personal
+                <a href="./paginas/cuidado-personal.html" class="relative group transition">Cuidado Personal
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Dermocosmética
+                <a href="./paginas/dermocomestica.html" class="relative group transition">Dermocosmética
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Medicamentos
+                <a href="./paginas/medicamentos.html" class="relative group transition">Medicamentos
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#" class="relative group transition">Bebés
+                <a href="./paginas/bebes.html" class="relative group transition">Bebés
                     <span class="absolute left-0 -bottom-1 w-0 h-[2px] bg-[#12b1be] transition-all duration-300 group-hover:w-full"></span>
                 </a>
             </nav>
