--- a/paginas/dermocomestica.html
+++ b/paginas/dermocomestica.html
@@ -101,7 +101,7 @@
           </button>
           <p class="text-sm font-medium text-gray-300 text-center">
             ¿No eres usuario?
-            <a href="#" class="text-[#12b1be] hover:underline">Crear tu cuenta</a>
+            <a href="../registro.html" class="text-[#12b1be] hover:underline">Crear tu cuenta</a>
           </p>
         </form>
       </div>
